# ChangeLog for media-sound/beep-media-player
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/beep-media-player/Attic/ChangeLog,v 1.4 2004/02/06 15:59:08 lordvan Exp $

*beep-media-player-0.9.6.1 (06 Feb 2004)
  06 Feb 2004; Thomas Raschbacher <lordvan@gento.org>
  beep-media-player-0.9.6.1.ebuild, beep-mediao-player-1.0.0_pre5.ebuild,
  beep-media-player-1.0.0_pre5-r1.ebuild:
  version bump + added alsa deps and ./configure switches for alsa
  according to http://beepmp.sourceforge.net/index.php#BMP%20version%20numbers
  0.9.6 is newer than 1.0.0_pre5
  changed 1.0.0-pre5* to -<arch>
	
*beep-media-player-1.0.0_pre5-r1 (05 Feb 2004)

  05 Feb 2004; Jeremy Huddleston <eradicator@gentoo.org>
  beep-media-player-1.0.0_pre5-r1.ebuild, beep-media-player-1.0.0_pre5.ebuild:
  The previous fix should've resulted in a revision bump, so here's the bump.

  04 Feb 2004; Jeremy Huddleston <eradicator@gentoo.org>
  beep-media-player-1.0.0_pre5.ebuild:
  Fixed DEPEND/RDEPEND mixup.  Closes bug #40316.

*beep-media-player-1.0.0_pre5 (29 Nov 2003)

  29 Nov 2003; Hanno Boeck <hanno@gentoo.org>
  beep-media-player-1.0.0_pre5.ebuild, files/beep-media-player.desktop:
  User submitted ebuild from Gustavo Zacarias in bug #31899.
