@@ -1,7 +1,7 @@
-MD5 e4410b9ea91198253f2b08c2a5f02f94 beep-media-player-0.9.6.1.ebuild 2185
+MD5 dba953e938628ef46bf29e4506dfb052 beep-media-player-1.0.0_pre5-r1.ebuild 2092
+MD5 9407284d80d5d1c68a6bb10fb3030ddb beep-media-player-0.9.6.1-r1.ebuild 2231
+MD5 510071f444ee2e36cc7aa4bbe422016a ChangeLog 1517
+MD5 2b0e9087ef8939ab0578160c97b115e0 metadata.xml 215
 MD5 49ac6fbcf87a9de0e4fb7f349c53805c files/beep-media-player.desktop 281
 MD5 3c076f9d2b4d924ac325af974986ed77 files/digest-beep-media-player-1.0.0_pre5-r1 81
-MD5 063233d8fba29761b83b023b6a367489 files/digest-beep-media-player-0.9.6.1 64
-MD5 dba953e938628ef46bf29e4506dfb052 beep-media-player-1.0.0_pre5-r1.ebuild 2092
-MD5 c663762c705c36253dca395ffd9089ee ChangeLog 1301
-MD5 a72a06a37ca4e5905085ebff07fe9e9e metadata.xml 217
+MD5 063233d8fba29761b83b023b6a367489 files/digest-beep-media-player-0.9.6.1-r1 64
