@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/beep-media-player
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/beep-media-player/Attic/ChangeLog,v 1.4 2004/02/06 15:59:08 lordvan Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/beep-media-player/Attic/ChangeLog,v 1.5 2004/03/03 12:18:38 eradicator Exp $
+
+*beep-media-player-0.9.6.1-r1 (03 Mar 2004)
+
+  03 Mar 2004; Jeremy Huddleston <eradicator@gentoo.org>
+  beep-media-player-0.9.6.1.ebuild, metadata.xml:
+  -Os borks... filtering out.  See bug #42893.  Stable x86.
 
 *beep-media-player-0.9.6.1 (06 Feb 2004)
   06 Feb 2004; Thomas Raschbacher <lordvan@gento.org>
